@@ -35,11 +35,12 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyMap;
+import static org.mockito.ArgumentMatchers.anyCollection;
 import static org.mockito.ArgumentMatchers.anySet;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.anyBoolean;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doCallRealMethod;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.eq;
@@ -65,8 +66,11 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
@@ -79,8 +83,6 @@ import javax.servlet.ServletOutputStream;
 import javax.servlet.WriteListener;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
-import org.apache.commons.compress.archivers.tar.TarArchiveOutputStream;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.hadoop.fs.FileUtil;
 import org.apache.hadoop.hdds.client.ReplicationConfig;
@@ -88,10 +90,10 @@ import org.apache.hadoop.hdds.client.ReplicationFactor;
 import org.apache.hadoop.hdds.client.ReplicationType;
 import org.apache.hadoop.hdds.client.StandaloneReplicationConfig;
 import org.apache.hadoop.hdds.conf.OzoneConfiguration;
-import org.apache.hadoop.hdds.utils.Archiver;
 import org.apache.hadoop.hdds.utils.IOUtils;
 import org.apache.hadoop.hdds.utils.db.DBCheckpoint;
 import org.apache.hadoop.hdds.utils.db.DBStore;
+import org.apache.hadoop.hdds.utils.db.InodeMetadataRocksDBCheckpoint;
 import org.apache.hadoop.ozone.MiniOzoneCluster;
 import org.apache.hadoop.ozone.OzoneConsts;
 import org.apache.hadoop.ozone.TestDataUtil;
@@ -102,12 +104,17 @@ import org.apache.hadoop.ozone.lock.BootstrapStateHandler;
 import org.apache.hadoop.ozone.om.codec.OMDBDefinition;
 import org.apache.hadoop.ozone.om.helpers.OmKeyInfo;
 import org.apache.hadoop.ozone.om.helpers.RepeatedOmKeyInfo;
-import org.apache.hadoop.ozone.om.service.DirectoryDeletingService;
-import org.apache.hadoop.ozone.om.service.KeyDeletingService;
-import org.apache.hadoop.ozone.om.service.SnapshotDeletingService;
+import org.apache.hadoop.ozone.om.helpers.SnapshotInfo;
+import org.apache.hadoop.ozone.om.lock.DAGLeveledResource;
+import org.apache.hadoop.ozone.om.lock.IOzoneManagerLock;
+import org.apache.hadoop.ozone.om.lock.OMLockDetails;
 import org.apache.hadoop.ozone.om.snapshot.OmSnapshotUtils;
+import org.apache.hadoop.ozone.om.snapshot.SnapshotCache;
+import org.apache.hadoop.ozone.protocol.proto.OzoneManagerProtocolProtos;
 import org.apache.hadoop.security.UserGroupInformation;
-import org.apache.ozone.rocksdiff.RocksDBCheckpointDiffer;
+import org.apache.ozone.test.GenericTestUtils;
+import org.apache.ratis.protocol.ClientId;
+import org.apache.ratis.util.UncheckedAutoCloseable;
 import org.apache.ratis.util.function.UncheckedAutoCloseableSupplier;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -155,6 +162,7 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
   @AfterEach
   void shutdown() {
     IOUtils.closeQuietly(client, cluster);
+    cluster = null;
   }
 
   private void setupCluster() throws Exception {
@@ -163,7 +171,8 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
     conf.set(OZONE_ADMINISTRATORS, OZONE_ADMINISTRATORS_WILDCARD);
     cluster.waitForClusterToBeReady();
     client = cluster.newClient();
-    om = cluster.getOzoneManager();
+    OzoneManager normalOm = cluster.getOzoneManager();
+    om = spy(normalOm);
   }
 
   private void setupMocks() throws Exception {
@@ -226,7 +235,8 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
     doCallRealMethod().when(omDbCheckpointServletMock)
         .writeDbDataToStream(any(), any(), any(), any(), any());
     doCallRealMethod().when(omDbCheckpointServletMock)
-        .writeDBToArchive(any(), any(), any(), any(), any(), any(), anyBoolean());
+        .collectFilesFromDir(any(), any(), any(), anyBoolean(), any());
+    doCallRealMethod().when(omDbCheckpointServletMock).collectDbDataToTransfer(any(), any(), any());
 
     when(omDbCheckpointServletMock.getBootstrapStateLock())
         .thenReturn(lock);
@@ -234,11 +244,10 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
     assertNull(doCallRealMethod().when(omDbCheckpointServletMock).getBootstrapTempData());
     doCallRealMethod().when(omDbCheckpointServletMock).
         processMetadataSnapshotRequest(any(), any(), anyBoolean(), anyBoolean());
-    doCallRealMethod().when(omDbCheckpointServletMock).writeDbDataToStream(any(), any(), any(), any());
     doCallRealMethod().when(omDbCheckpointServletMock).getCompactionLogDir();
     doCallRealMethod().when(omDbCheckpointServletMock).getSstBackupDir();
     doCallRealMethod().when(omDbCheckpointServletMock)
-        .transferSnapshotData(anySet(), any(), anySet(), any(), any(), anyMap());
+        .collectSnapshotData(anySet(),  anyCollection(), anyCollection(), any(), any());
     doCallRealMethod().when(omDbCheckpointServletMock).createAndPrepareCheckpoint(anyBoolean());
     doCallRealMethod().when(omDbCheckpointServletMock).getSnapshotDirsFromDB(any(), any(), any());
   }
@@ -272,6 +281,31 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
     } else {
       assertTrue(obtainedFilesUnderMaxLimit);
     }
+  }
+
+  @Test
+  public void testWriteDBToArchiveClosesFilesListStream() throws Exception {
+    OMDBCheckpointServletInodeBasedXfer servlet = new OMDBCheckpointServletInodeBasedXfer();
+
+    final Path dbDir = Files.createTempDirectory(folder, "dbdir-");
+    final AtomicBoolean closed = new AtomicBoolean(false);
+    final Stream<Path> stream = Stream.<Path>empty().onClose(() -> closed.set(true));
+
+    // Do not use CALLS_REAL_METHODS for java.nio.file.Files: internal/private static
+    // methods (eg Files.provider()) get intercepted too and Mockito will try to invoke
+    // them reflectively, which fails on JDK9+ without --add-opens.
+    try (MockedStatic<Files> files = mockStatic(Files.class)) {
+      files.when(() -> Files.exists(dbDir)).thenReturn(true);
+      files.when(() -> Files.list(dbDir)).thenReturn(stream);
+
+      OMDBArchiver archiver = new OMDBArchiver();
+      archiver.setTmpDir(folder);
+      boolean result = servlet.collectFilesFromDir(new HashSet<>(), dbDir,
+          new AtomicLong(Long.MAX_VALUE), true, archiver);
+      assertTrue(result);
+    }
+
+    assertTrue(closed.get(), "Files.list() stream should be closed to avoid FD leaks");
   }
 
   @ParameterizedTest
@@ -343,8 +377,9 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
     assertEquals(numSnapshots, actualYamlFiles,
         "Number of generated YAML files should match the number of snapshots.");
 
-    // create hardlinks now
-    OmSnapshotUtils.createHardLinks(newDbDir.toPath(), true);
+    InodeMetadataRocksDBCheckpoint obtainedCheckpoint =
+        new InodeMetadataRocksDBCheckpoint(newDbDir.toPath());
+    assertNotNull(obtainedCheckpoint);
 
     if (includeSnapshot) {
       List<String> yamlRelativePaths = snapshotPaths.stream().map(path -> {
@@ -356,7 +391,8 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
       }).collect(Collectors.toList());
 
       for (String yamlRelativePath : yamlRelativePaths) {
-        String yamlFileName = Paths.get(newDbDir.getPath(), yamlRelativePath).toString();
+        String yamlFileName = Paths.get(newDbDir.getPath(),
+            yamlRelativePath).toString();
         assertTrue(Files.exists(Paths.get(yamlFileName)));
       }
     }
@@ -387,15 +423,11 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
     File newDbDir = new File(newDbDirName);
     assertTrue(newDbDir.mkdirs());
     FileUtil.unTar(tempFile, newDbDir);
-    Set<Path> allPathsInTarball = getAllPathsInTarball(newDbDir);
-    // create hardlinks now
-    OmSnapshotUtils.createHardLinks(newDbDir.toPath(), false);
-    for (Path old : allPathsInTarball) {
-      assertTrue(old.toFile().delete());
-    }
-    Path snapshotDbDir = Paths.get(newDbDir.toPath().toString(), OM_SNAPSHOT_CHECKPOINT_DIR,
-        OM_DB_NAME + "-" + snapshotToModify.getSnapshotId());
-    deleteWalFiles(snapshotDbDir);
+    InodeMetadataRocksDBCheckpoint obtainedCheckpoint =
+        new InodeMetadataRocksDBCheckpoint(newDbDir.toPath());
+    assertNotNull(obtainedCheckpoint);
+    Path snapshotDbDir = Paths.get(newDbDir.getPath(),
+        OM_SNAPSHOT_CHECKPOINT_DIR, OM_DB_NAME + "-" + snapshotToModify.getSnapshotId());
     assertTrue(Files.exists(snapshotDbDir));
     String value = getValueFromSnapshotDeleteTable(dummyKey, snapshotDbDir.toString());
     assertNotNull(value);
@@ -410,109 +442,236 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
     // Create dummy files: one SST, one non-SST
     Path sstFile = dbDir.resolve("test.sst");
     Files.write(sstFile, "sst content".getBytes(StandardCharsets.UTF_8)); // Write some content to make it non-empty
-
     Path nonSstFile = dbDir.resolve("test.log");
     Files.write(nonSstFile, "log content".getBytes(StandardCharsets.UTF_8));
     Set<String> sstFilesToExclude = new HashSet<>();
     AtomicLong maxTotalSstSize = new AtomicLong(1000000); // Sufficient size
-    Map<String, String> hardLinkFileMap = new java.util.HashMap<>();
+    OMDBArchiver omDbArchiver = new OMDBArchiver();
     Path tmpDir = folder.resolve("tmp");
     Files.createDirectories(tmpDir);
-    TarArchiveOutputStream mockArchiveOutputStream = mock(TarArchiveOutputStream.class);
+    omDbArchiver.setTmpDir(tmpDir);
+    OMDBArchiver omDbArchiverSpy = spy(omDbArchiver);
     List<String> fileNames = new ArrayList<>();
-    try (MockedStatic<Archiver> archiverMock = mockStatic(Archiver.class)) {
-      archiverMock.when(() -> Archiver.linkAndIncludeFile(any(), any(), any(), any())).thenAnswer(invocation -> {
-        // Get the actual mockArchiveOutputStream passed from writeDBToArchive
-        TarArchiveOutputStream aos = invocation.getArgument(2);
-        File sourceFile = invocation.getArgument(0);
-        String fileId = invocation.getArgument(1);
-        fileNames.add(sourceFile.getName());
-        aos.putArchiveEntry(new TarArchiveEntry(sourceFile, fileId));
-        aos.write(new byte[100], 0, 100); // Simulate writing
-        aos.closeArchiveEntry();
-        return 100L;
-      });
-      boolean success = omDbCheckpointServletMock.writeDBToArchive(
-          sstFilesToExclude, dbDir, maxTotalSstSize, mockArchiveOutputStream,
-              tmpDir, hardLinkFileMap, expectOnlySstFiles);
-      assertTrue(success);
-      verify(mockArchiveOutputStream, times(fileNames.size())).putArchiveEntry(any());
-      verify(mockArchiveOutputStream, times(fileNames.size())).closeArchiveEntry();
-      verify(mockArchiveOutputStream, times(fileNames.size())).write(any(byte[].class), anyInt(),
-          anyInt()); // verify write was called once
-
-      boolean containsNonSstFile = false;
-      for (String fileName : fileNames) {
-        if (expectOnlySstFiles) {
-          assertTrue(fileName.endsWith(".sst"), "File is not an SST File");
-        } else {
-          containsNonSstFile = true;
-        }
-      }
-
-      if (!expectOnlySstFiles) {
-        assertTrue(containsNonSstFile, "SST File is not expected");
+    doAnswer((invocation) -> {
+      File sourceFile = invocation.getArgument(0);
+      fileNames.add(sourceFile.getName());
+      omDbArchiver.recordFileEntry(sourceFile, invocation.getArgument(1));
+      return null;
+    }).when(omDbArchiverSpy).recordFileEntry(any(), anyString());
+    boolean success =
+        omDbCheckpointServletMock.collectFilesFromDir(sstFilesToExclude, dbDir, maxTotalSstSize, expectOnlySstFiles,
+            omDbArchiverSpy);
+    assertTrue(success);
+    verify(omDbArchiverSpy, times(fileNames.size())).recordFileEntry(any(), anyString());
+    boolean containsNonSstFile = false;
+    for (String fileName : fileNames) {
+      if (expectOnlySstFiles) {
+        assertTrue(fileName.endsWith(".sst"), "File is not an SST File");
+      } else {
+        containsNonSstFile = true;
       }
     }
+
+    if (!expectOnlySstFiles) {
+      assertTrue(containsNonSstFile, "SST File is not expected");
+    }
+  }
+
+  /**
+   * Verifies that snapshot cache lock coordinates between checkpoint and purge operations,
+   * preventing race conditions on follower OM where snapshot directory could be deleted
+   * while checkpoint is reading snapshot data.
+   *
+   * Test steps:
+   * 1. Create keys
+   * 2. Create snapshot 1
+   * 3. Create snapshot 2
+   * 4. Delete snapshot 2 (marks it as DELETED)
+   * 5. Stop SnapshotDeletingService to prevent automatic purge
+   * 6. Invoke checkpoint servlet (acquires bootstrap lock and snapshot cache lock)
+   * 7. Submit purge request for snapshot 2 during checkpoint processing (simulates Ratis transaction on follower)
+   * 8. Verify purge waits for snapshot cache lock (blocked while checkpoint holds it)
+   * 9. Verify checkpoint completes first and tarball includes snapshot 2 data
+   * 10. Verify purge completes after checkpoint releases snapshot cache lock
+   *
+   * @throws Exception if test setup or execution fails
+   */
+  @Test
+  public void testBootstrapOnFollowerConsistency() throws Exception {
+    String volumeName = "vol" + RandomStringUtils.secure().nextNumeric(5);
+    String bucketName = "buck" + RandomStringUtils.secure().nextNumeric(5);
+    setupCluster();
+    om.getKeyManager().getSnapshotSstFilteringService().pause();
+    om.getKeyManager().getSnapshotDeletingService().suspend();
+    // Create test data and snapshots
+    OzoneBucket bucket = TestDataUtil.createVolumeAndBucket(client, volumeName, bucketName);
+    // Create key before first snapshot
+    TestDataUtil.createKey(bucket, "key1",
+        ReplicationConfig.fromTypeAndFactor(ReplicationType.RATIS, ReplicationFactor.ONE),
+        "data1".getBytes(StandardCharsets.UTF_8));
+    client.getObjectStore().createSnapshot(volumeName, bucketName, "snapshot1");
+    client.getObjectStore().createSnapshot(volumeName, bucketName, "snapshot2");
+    List<OzoneSnapshot> snapshots = new ArrayList<>();
+    client.getObjectStore().listSnapshot(volumeName, bucketName, "", null)
+        .forEachRemaining(snapshots::add);
+    assertEquals(2, snapshots.size(), "Should have 2 snapshots initially");
+    OzoneSnapshot snapshot1 = snapshots.stream()
+        .filter(snap -> snap.getName().equals("snapshot1"))
+        .findFirst().get();
+    OzoneSnapshot snapshot2 = snapshots.stream()
+        .filter(snap -> snap.getName().equals("snapshot2")).findFirst().get();
+    assertEquals(2, snapshots.size(), "Should have 2 snapshots initially");
+    waitTillSnapshotInDeletedState(volumeName, bucketName, snapshot2);
+    // Setup servlet mocks for checkpoint processing
+    setupMocks();
+    when(requestMock.getParameter(OZONE_DB_CHECKPOINT_INCLUDE_SNAPSHOT_DATA)).thenReturn("true");
+    CountDownLatch purgeSubmitted = new CountDownLatch(1);
+    AtomicLong checkpointEndTime = new AtomicLong(0);
+    AtomicLong purgeEndTime = new AtomicLong(0);
+
+    DBStore dbStore = om.getMetadataManager().getStore();
+    DBStore spyDbStore = spy(dbStore);
+    AtomicReference<DBCheckpoint> capturedCheckpoint = new AtomicReference<>();
+    when(spyDbStore.getCheckpoint(true)).thenAnswer(invocation -> {
+      // Submit purge request in background thread (simulating Ratis transaction on follower)
+      Thread purgeThread = new Thread(() -> {
+        try {
+          String snapshotTableKey = SnapshotInfo.getTableKey(volumeName, bucketName, snapshot2.getName());
+          // Construct SnapshotPurge request
+          OzoneManagerProtocolProtos.SnapshotPurgeRequest snapshotPurgeRequest =
+              OzoneManagerProtocolProtos.SnapshotPurgeRequest.newBuilder()
+                  .addSnapshotDBKeys(snapshotTableKey)
+                  .build();
+
+          OzoneManagerProtocolProtos.OMRequest omRequest = OzoneManagerProtocolProtos.OMRequest.newBuilder()
+              .setCmdType(OzoneManagerProtocolProtos.Type.SnapshotPurge)
+              .setSnapshotPurgeRequest(snapshotPurgeRequest)
+              .setClientId(UUID.randomUUID().toString())
+              .build();
+
+          purgeSubmitted.countDown();
+          long purgeStartTime = System.currentTimeMillis();
+          // Submit via Ratis (simulating follower receiving transaction)
+          // This will trigger OMSnapshotPurgeResponse which needs SNAPSHOT_DB_LOCK
+          ClientId clientId = ClientId.randomId();
+          long callId = 1;
+          OzoneManagerProtocolProtos.OMResponse
+              response = om.getOmRatisServer().submitRequest(omRequest, clientId, callId);
+
+          if (response.getSuccess()) {
+            // Wait for purge to complete (snapshot removed from table)
+            GenericTestUtils.waitFor(() -> {
+              try {
+                boolean purged = om.getMetadataManager().getSnapshotInfoTable().get(snapshotTableKey) == null;
+                if (purged) {
+                  purgeEndTime.set(System.currentTimeMillis());
+                  long duration = purgeEndTime.get() - purgeStartTime;
+                  LOG.info("Purge completed in {} ms", duration);
+                }
+                return purged;
+              } catch (Exception ex) {
+                return false;
+              }
+            }, 100, 40_000);
+          }
+        } catch (Exception e) {
+          LOG.error("Purge submission failed", e);
+        }
+      });
+      purgeThread.start();
+
+      // Wait for purge request to be submitted
+      assertTrue(purgeSubmitted.await(2, TimeUnit.SECONDS), "Purge should be submitted");
+      // Small delay to ensure purge request reaches state machine
+      Thread.sleep(200);
+      DBCheckpoint checkpoint = spy(dbStore.getCheckpoint(true));
+      doNothing().when(checkpoint).cleanupCheckpoint(); // Don't cleanup for verification
+      capturedCheckpoint.set(checkpoint);
+      return checkpoint;
+    });
+    // Initialize servlet
+    doCallRealMethod().when(omDbCheckpointServletMock).initialize(any(), any(),
+        eq(false), any(), any(), eq(false));
+    omDbCheckpointServletMock.initialize(spyDbStore, om.getMetrics().getDBCheckpointMetrics(),
+        false, om.getOmAdminUsernames(), om.getOmAdminGroups(), false);
+    when(responseMock.getOutputStream()).thenReturn(servletOutputStream);
+    // Process checkpoint servlet
+    omDbCheckpointServletMock.doGet(requestMock, responseMock);
+    String testDirName = folder.resolve("testDir").toString();
+    String newDbDirName = testDirName + OM_KEY_PREFIX + OM_DB_NAME;
+    File newDbDir = new File(newDbDirName);
+    assertTrue(newDbDir.mkdirs());
+    FileUtil.unTar(tempFile, newDbDir);
+    InodeMetadataRocksDBCheckpoint obtainedCheckpoint =
+        new InodeMetadataRocksDBCheckpoint(newDbDir.toPath());
+    assertNotNull(obtainedCheckpoint);
+    Path snapshot1DbDir = Paths.get(newDbDir.getPath(),  OM_SNAPSHOT_CHECKPOINT_DIR,
+        OM_DB_NAME + "-" + snapshot1.getSnapshotId());
+    Path snapshot2DbDir = Paths.get(newDbDir.getPath(),  OM_SNAPSHOT_CHECKPOINT_DIR,
+        OM_DB_NAME + "-" + snapshot2.getSnapshotId());
+    assertTrue(purgeEndTime.get() >= checkpointEndTime.get(),
+        "Purge should complete after checkpoint releases snapshot cache lock");
+
+    // Verify snapshot is purged
+    List<OzoneSnapshot> snapshotsAfter = new ArrayList<>();
+    client.getObjectStore().listSnapshot(volumeName, bucketName, "", null)
+        .forEachRemaining(snapshotsAfter::add);
+    assertEquals(1, snapshotsAfter.size(), "Snapshot2 should be purged");
+    boolean snapshot1IncludedInCheckpoint = Files.exists(snapshot1DbDir);
+    boolean snapshot2IncludedInCheckpoint = Files.exists(snapshot2DbDir);
+    assertTrue(snapshot1IncludedInCheckpoint && snapshot2IncludedInCheckpoint,
+        "Checkpoint should include both snapshot1 and snapshot2 data");
+    // Cleanup
+    if (capturedCheckpoint.get() != null) {
+      capturedCheckpoint.get().cleanupCheckpoint();
+    }
+  }
+
+  private void waitTillSnapshotInDeletedState(String volumeName, String bucketName, OzoneSnapshot snapshot)
+      throws IOException, InterruptedException, TimeoutException {
+    String snapshotTableKey = SnapshotInfo.getTableKey(volumeName, bucketName, snapshot.getName());
+    // delete snapshot and wait for snapshot to be purged
+    client.getObjectStore().deleteSnapshot(volumeName, bucketName, snapshot.getName());
+    GenericTestUtils.waitFor(() -> {
+      try {
+        SnapshotInfo snapshotInfo = om.getMetadataManager().getSnapshotInfoTable().get(snapshotTableKey);
+        return snapshotInfo != null &&
+            snapshotInfo.getSnapshotStatus().name().equals(SnapshotInfo.SnapshotStatus.SNAPSHOT_DELETED.name());
+      } catch (Exception ex) {
+        LOG.error("Exception while querying snapshot info for key in cache {}", snapshotTableKey, ex);
+        return false;
+      }
+    }, 100, 30_000);
+    om.awaitDoubleBufferFlush();
   }
 
   @Test
   public void testBootstrapLockCoordination() throws Exception {
-    // Create mocks for all background services
-    KeyDeletingService mockDeletingService = mock(KeyDeletingService.class);
-    DirectoryDeletingService mockDirDeletingService = mock(DirectoryDeletingService.class);
-    SstFilteringService mockFilteringService = mock(SstFilteringService.class);
-    SnapshotDeletingService mockSnapshotDeletingService = mock(SnapshotDeletingService.class);
-    RocksDBCheckpointDiffer mockCheckpointDiffer = mock(RocksDBCheckpointDiffer.class);
-    // Create mock locks for each service
-    BootstrapStateHandler.Lock mockDeletingLock = mock(BootstrapStateHandler.Lock.class);
-    BootstrapStateHandler.Lock mockDirDeletingLock = mock(BootstrapStateHandler.Lock.class);
-    BootstrapStateHandler.Lock mockFilteringLock = mock(BootstrapStateHandler.Lock.class);
-    BootstrapStateHandler.Lock mockSnapshotDeletingLock = mock(BootstrapStateHandler.Lock.class);
-    BootstrapStateHandler.Lock mockCheckpointDifferLock = mock(BootstrapStateHandler.Lock.class);
-    // Configure service mocks to return their respective locks
-    when(mockDeletingService.getBootstrapStateLock()).thenReturn(mockDeletingLock);
-    when(mockDirDeletingService.getBootstrapStateLock()).thenReturn(mockDirDeletingLock);
-    when(mockFilteringService.getBootstrapStateLock()).thenReturn(mockFilteringLock);
-    when(mockSnapshotDeletingService.getBootstrapStateLock()).thenReturn(mockSnapshotDeletingLock);
-    when(mockCheckpointDiffer.getBootstrapStateLock()).thenReturn(mockCheckpointDifferLock);
-    // Mock KeyManager and its services
-    KeyManager mockKeyManager = mock(KeyManager.class);
-    when(mockKeyManager.getDeletingService()).thenReturn(mockDeletingService);
-    when(mockKeyManager.getDirDeletingService()).thenReturn(mockDirDeletingService);
-    when(mockKeyManager.getSnapshotSstFilteringService()).thenReturn(mockFilteringService);
-    when(mockKeyManager.getSnapshotDeletingService()).thenReturn(mockSnapshotDeletingService);
     // Mock OMMetadataManager and Store
     OMMetadataManager mockMetadataManager = mock(OMMetadataManager.class);
     DBStore mockStore = mock(DBStore.class);
     when(mockMetadataManager.getStore()).thenReturn(mockStore);
-    when(mockStore.getRocksDBCheckpointDiffer()).thenReturn(mockCheckpointDiffer);
     // Mock OzoneManager
     OzoneManager mockOM = mock(OzoneManager.class);
-    when(mockOM.getKeyManager()).thenReturn(mockKeyManager);
     when(mockOM.getMetadataManager()).thenReturn(mockMetadataManager);
+
+    IOzoneManagerLock mockOmLock = mock(IOzoneManagerLock.class);
+    when(mockOmLock.acquireResourceLock(any())).thenCallRealMethod();
+    when(mockOmLock.acquireResourceWriteLock(eq(DAGLeveledResource.BOOTSTRAP_LOCK)))
+        .thenReturn(OMLockDetails.EMPTY_DETAILS_LOCK_ACQUIRED);
+    when(mockMetadataManager.getLock()).thenReturn(mockOmLock);
     // Create the actual Lock instance (this tests the real implementation)
     OMDBCheckpointServlet.Lock bootstrapLock = new OMDBCheckpointServlet.Lock(mockOM);
     // Test successful lock acquisition
-    BootstrapStateHandler.Lock result = bootstrapLock.lock();
+    UncheckedAutoCloseable result = bootstrapLock.acquireWriteLock();
     // Verify all service locks were acquired
-    verify(mockDeletingLock).lock();
-    verify(mockDirDeletingLock).lock();
-    verify(mockFilteringLock).lock();
-    verify(mockSnapshotDeletingLock).lock();
-    verify(mockCheckpointDifferLock).lock();
+    verify(mockOmLock).acquireResourceWriteLock(eq(DAGLeveledResource.BOOTSTRAP_LOCK));
     // Verify double buffer flush was called
     verify(mockOM).awaitDoubleBufferFlush();
-    // Verify the lock returns itself
-    assertEquals(bootstrapLock, result);
     // Test unlock
-    bootstrapLock.unlock();
-    // Verify all service locks were released
-    verify(mockDeletingLock).unlock();
-    verify(mockDirDeletingLock).unlock();
-    verify(mockFilteringLock).unlock();
-    verify(mockSnapshotDeletingLock).unlock();
-    verify(mockCheckpointDifferLock).unlock();
+    result.close();
+    verify(mockOmLock).releaseResourceWriteLock(eq(DAGLeveledResource.BOOTSTRAP_LOCK));
+
   }
 
   /**
@@ -538,13 +697,11 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
     AtomicInteger servicesSucceeded = new AtomicInteger(0);
     // Checkpoint thread holds bootstrap lock
     Thread checkpointThread = new Thread(() -> {
-      try {
-        LOG.info("Acquiring bootstrap lock for checkpoint...");
-        BootstrapStateHandler.Lock acquired = bootstrapLock.lock();
+      LOG.info("Acquiring bootstrap lock for checkpoint...");
+      try (UncheckedAutoCloseable acquired = bootstrapLock.acquireWriteLock()) {
         bootstrapAcquired.countDown();
         Thread.sleep(3000); // Hold for 3 seconds
         LOG.info("Releasing bootstrap lock...");
-        acquired.unlock();
       } catch (Exception e) {
         fail("Checkpoint failed: " + e.getMessage());
       }
@@ -558,11 +715,12 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
               LOG.info("{} : Trying to acquire lock...", serviceName);
               servicesBlocked.incrementAndGet();
               BootstrapStateHandler.Lock serviceLock = service.getBootstrapStateLock();
-              serviceLock.lock(); // Should block!
-              servicesBlocked.decrementAndGet();
-              servicesSucceeded.incrementAndGet();
-              LOG.info(" {} : Lock acquired!", serviceName);
-              serviceLock.unlock();
+              try (UncheckedAutoCloseable lock = serviceLock.acquireReadLock()) {
+                // Should block!
+                servicesBlocked.decrementAndGet();
+                servicesSucceeded.incrementAndGet();
+                LOG.info(" {} : Lock acquired!", serviceName);
+              }
             }
             allServicesCompleted.countDown();
           } catch (Exception e) {
@@ -627,27 +785,33 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
         .filter(snap -> snap.getName().equals("snapshot1"))
         .findFirst()
         .orElseThrow(() -> new RuntimeException("snapshot1 not found"));
-
     // Setup servlet mocks for checkpoint processing
     setupMocks();
     when(requestMock.getParameter(OZONE_DB_CHECKPOINT_INCLUDE_SNAPSHOT_DATA)).thenReturn("true");
 
     // Create a checkpoint that captures current state (S1)
-    DBStore dbStore = om.getMetadataManager().getStore();
-    DBStore spyDbStore = spy(dbStore);
-    AtomicReference<DBCheckpoint> capturedCheckpoint = new AtomicReference<>();
+    DBStore spyDbStore = spy(om.getMetadataManager().getStore());
 
-    when(spyDbStore.getCheckpoint(true)).thenAnswer(invocation -> {
-      // Purge snapshot2 before checkpoint
+    AtomicReference<DBCheckpoint> capturedCheckpoint = new AtomicReference<>();
+    SnapshotCache spySnapshotCache = spy(om.getOmSnapshotManager().getSnapshotCache());
+    OmSnapshotManager spySnapshotManager = spy(om.getOmSnapshotManager());
+    when(om.getOmSnapshotManager()).thenReturn(spySnapshotManager);
+    when(spySnapshotManager.getSnapshotCache()).thenReturn(spySnapshotCache);
+    // Mock the snapshot cache to create a snapshot2 just after taking a snapshot cache lock.
+    doAnswer(invocationOnMock -> {
+      Object ret = invocationOnMock.callRealMethod();
       // create snapshot 3 before checkpoint
       client.getObjectStore().createSnapshot(volumeName, bucketName, "snapshot2");
       // Also wait for double buffer to flush to ensure all transactions are committed
       om.awaitDoubleBufferFlush();
-      DBCheckpoint checkpoint = spy(dbStore.getCheckpoint(true));
+      return ret;
+    }).when(spySnapshotCache).lock();
+    doAnswer(invocation -> {
+      DBCheckpoint checkpoint = (DBCheckpoint) spy(invocation.callRealMethod());
       doNothing().when(checkpoint).cleanupCheckpoint(); // Don't cleanup for verification
       capturedCheckpoint.set(checkpoint);
       return checkpoint;
-    });
+    }).when(spyDbStore).getCheckpoint(eq(true));
 
     // Initialize servlet
     doCallRealMethod().when(omDbCheckpointServletMock).initialize(any(), any(),
@@ -671,10 +835,12 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
     File newDbDir = new File(newDbDirName);
     assertTrue(newDbDir.mkdirs());
     FileUtil.unTar(tempFile, newDbDir);
-    OmSnapshotUtils.createHardLinks(newDbDir.toPath(), true);
-    Path snapshot1DbDir = Paths.get(newDbDir.toPath().toString(),  OM_SNAPSHOT_CHECKPOINT_DIR,
+    InodeMetadataRocksDBCheckpoint obtainedCheckpoint =
+        new InodeMetadataRocksDBCheckpoint(newDbDir.toPath());
+    assertNotNull(obtainedCheckpoint);
+    Path snapshot1DbDir = Paths.get(newDbDir.getPath(), OM_SNAPSHOT_CHECKPOINT_DIR,
         OM_DB_NAME + "-" + snapshot1.getSnapshotId());
-    Path snapshot2DbDir = Paths.get(newDbDir.toPath().toString(),  OM_SNAPSHOT_CHECKPOINT_DIR,
+    Path snapshot2DbDir = Paths.get(newDbDir.getPath(),  OM_SNAPSHOT_CHECKPOINT_DIR,
         OM_DB_NAME + "-" + snapshot2.getSnapshotId());
     boolean snapshot1IncludedInCheckpoint = Files.exists(snapshot1DbDir);
     boolean snapshot2IncludedInCheckpoint = Files.exists(snapshot2DbDir);
@@ -684,31 +850,6 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
     if (capturedCheckpoint.get() != null) {
       capturedCheckpoint.get().cleanupCheckpoint();
     }
-  }
-
-  private static void deleteWalFiles(Path snapshotDbDir) throws IOException {
-    try (Stream<Path> filesInTarball = Files.list(snapshotDbDir)) {
-      List<Path> files = filesInTarball.filter(p -> p.toString().contains(".log"))
-          .collect(Collectors.toList());
-      for (Path p : files) {
-        Files.delete(p);
-      }
-    }
-  }
-
-  private static Set<Path> getAllPathsInTarball(File newDbDir) throws IOException {
-    Set<Path> allPathsInTarball = new HashSet<>();
-    try (Stream<Path> filesInTarball = Files.list(newDbDir.toPath())) {
-      List<Path> files = filesInTarball.collect(Collectors.toList());
-      for (Path p : files) {
-        File file = p.toFile();
-        if (file.getName().equals(OmSnapshotManager.OM_HARDLINK_FILE)) {
-          continue;
-        }
-        allPathsInTarball.add(p);
-      }
-    }
-    return allPathsInTarball;
   }
 
   private void writeDummyKeyToDeleteTableOfSnapshotDB(OzoneSnapshot snapshotToModify, String bucketName,
@@ -749,6 +890,7 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
     doCallRealMethod().when(omDbCheckpointServletMock).initialize(any(), any(),
         eq(false), any(), any(), eq(false));
     doCallRealMethod().when(omDbCheckpointServletMock).getSnapshotDirsFromDB(any(), any(), any());
+    doCallRealMethod().when(omDbCheckpointServletMock).collectDbDataToTransfer(any(), any(), any());
     omDbCheckpointServletMock.initialize(spyDbStore, om.getMetrics().getDBCheckpointMetrics(),
         false,
         om.getOmAdminUsernames(), om.getOmAdminGroups(), false);
@@ -828,13 +970,6 @@ public class TestOMDbCheckpointServletInodeBasedXfer {
         String path  = metadataDir.relativize(p).toString();
         if (path.contains(OM_CHECKPOINT_DIR)) {
           path = metadataDir.relativize(dbStore.getDbLocation().toPath().resolve(p.getFileName())).toString();
-        }
-        if (path.startsWith(OM_DB_NAME)) {
-          Path fileName = Paths.get(path).getFileName();
-          // fileName will not be null, added null check for findbugs
-          if (fileName != null) {
-            path = fileName.toString();
-          }
         }
         hardlinkMap.computeIfAbsent(inode, k -> new ArrayList<>()).add(path);
         inodesFromOmDbCheckpoint.add(inode);
